Update project structure, implement elevation_list function, add plotting scripts, flatten run.py calls

--- a/BeRCM/.gitignore
+++ b/BeRCM/.gitignore
@@ -137,5 +137,7 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-# Ignore the plots directory and any contents
-plots/
+
+# Ignore run results
+.model/logs/*.log
+.plots/*.json
