--- a/BeRCM/requirements.txt
+++ b/BeRCM/requirements.txt
@@ -1,7 +1,8 @@
-numpy==1.19.5
-tqdm==4.56.0
-scipy==1.6.0
 sympy==1.7.1
+scipy==1.6.0
+tqdm==4.56.0
 matplotlib==3.3.4
+numpy==1.19.5
 codetiming==1.3.0
-symengine==0.7.2
+Pillow==8.2.0
+PyYAML==5.4.1
